import proto.WorkProtocolService_pb2 as WorkProtocol

class Collector:

    def test(self):
        print("ㅋㅋㅋ123123ㅋ")

    def load_browser(self):
        pass

    def get_url_url(self, channel, ):
        pass

    def collect_urls(self, works):
        print("collect urls")
        for work in works:
            print(work)
        WorkProtocol.Work(message="ㅋㅋㅋ123123")

    def collect_docs(self):
        print("collect docs")